# lingofix-desktop

./: .gitignore  Lingofix.slnx  README.md  package.json
.github/workflows/: desktop-bundles.yml  release.yml
backend/: Lingofix.Backend.csproj  Program.cs
backend/Documents/: ApiEndpointBuilder.cs  ChatModels.cs  CitationNormalizer.cs  CommentPreserver.cs  CompareModeKind.cs  DiffUtils.cs  DocumentPartUtils.cs  DocxIntegrityValidator.cs  DocxPartScanner.cs  DocxProcessingModeKind.cs  DocxSpecialContentInspector.cs  EmbeddedTextProcessor.cs  FieldTypePolicy.cs  JsonOptions.cs  LibreOfficeUnoCompareRunner.cs  LingofixRunner.cs  LlmClient.cs  Logging.cs  MarkdownProcessor.cs  NonBreakingSpaceRestorer.cs  PandocMarkdownConverter.cs  ParagraphProcessor.cs  ParagraphTextMapper.cs  PathUtils.cs  ProcessingCheckpointStore.cs  RunModels.cs  Settings.cs  TrackChangesGenerator.cs  TrailingWhitespaceRejector.cs  XmlTextSanitizer.cs
backend/Resources/: libreoffice-compare.py  word-compare.scpt
flatpak/: com.lingofix.desktop.desktop  com.lingofix.desktop.json  com.lingofix.desktop.metainfo.xml
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  i18n.test.ts  (+3 more)
scripts/: prepare-backend-binaries.mjs  resign-macos-app.mjs
tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri/capabilities/: default.json
tauri/icons/: icon.icns
tauri/resources/: libreoffice-compare.py  word-compare.scpt
tauri/resources/binaries/: libreoffice-compare.py
tauri/src/: citations.rs  main.rs
(+6 files in other folders)
